# screen_rotator

./: Cargo.toml
arduino/: arduino.ino
src/: args.rs  main.rs  monitor.rs  rotate_image.rs  serial.rs
