[package]
name = "screen_rotator"
authors = ["Dennis Koch"]
description = "Ein Programm zur automatischen Rotation von Bildschirminhalten durch die Verwendung eines Beschleunigungssensors"
readme = "README.md"
edition = "2024"

[dependencies]
# Einfacher Umgang mit Fehlern
anyhow = "1.0.98"

# Verarbeitung von Eingabeargumenten
clap = { version = "4.5.47", features = ["derive"] }

# Interaktive Auswahl des Monitors / der seriellen Schnittstelle
dialoguer = { version = "0.11.0", default-features = false }

# Arbeit mit Vektoren
glam = { version = "0.27.0", features = ["serde"] }

# Einlesen und Dekodieren von Bildern
image = "^0.24"

# Abstraktion über Grafik API (Erstellen eines Fensters, Darstellung des Bildes im Fenster)
miniquad = "0.4.8"

# Vereinfacht den Umgang mit miniquad
macroquad = "0.4.14"

# Framework zur SERialisierung + DEserialisierung (SER + DE = SERDE)
serde = { version = "1.0.219", features = ["default", "derive"] }

# Implementierung des serde Frameworks für das JSON Datenformat
serde_json = "1.0.140"

# Umgang mit seriellen Schnittstellen
serialport = { version = "4.7.1", features = ["serde"] }
